[gd_scene load_steps=17 format=3 uid="uid://cyblergtodunm"]

[ext_resource type="Texture2D" uid="uid://b66y711yxq42d" path="res://assets/sprites/pngs/1.png" id="1_7np1x"]
[ext_resource type="Script" path="res://scripts/dice.gd" id="1_r8uxv"]
[ext_resource type="Texture2D" uid="uid://cthewuh8wurhh" path="res://assets/sprites/pngs/0.png" id="3_086lr"]
[ext_resource type="Texture2D" uid="uid://d1bbhm6ra4xke" path="res://assets/sprites/pngs/2_r.png" id="4_og5fi"]
[ext_resource type="Texture2D" uid="uid://v4lcacuxfnd2" path="res://assets/sprites/pngs/4.png" id="4_wyaxo"]
[ext_resource type="Texture2D" uid="uid://cs1ug5p2srpr8" path="res://assets/sprites/pngs/3_r.png" id="5_1qtp1"]
[ext_resource type="Texture2D" uid="uid://drbjhu8srlll" path="res://assets/sprites/pngs/5.png" id="5_vej7f"]
[ext_resource type="Texture2D" uid="uid://c2f8m1f33ayak" path="res://assets/sprites/pngs/6.png" id="6_h0kvo"]
[ext_resource type="Texture2D" uid="uid://c8oem7lmugtgp" path="res://assets/sprites/pngs/heart.png" id="7_ysb6c"]
[ext_resource type="FontFile" uid="uid://b13bjnb8js1lx" path="res://assets/fonts/Rubik-Bold.ttf" id="8_r331j"]
[ext_resource type="Texture2D" uid="uid://c72c42ho43xq8" path="res://assets/sprites/pngs/icon.png" id="9_tt4xd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_48f4g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_086lr")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7np1x")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_og5fi")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1qtp1")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_wyaxo")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vej7f")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_h0kvo")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7iua3"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-358.275, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_138jc"]
resource_name = "float"
length = 4.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 3, 4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(-358.275, -0.25, 0, 0.25, 0, -379.52, -0.25, 0, 0.25, 0, -339.37, -0.25, 0, 0.25, 0, -357.77, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 3, 4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qg7yt"]
_data = {
"RESET": SubResource("Animation_7iua3"),
"float": SubResource("Animation_138jc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_maxu3"]
size = Vector2(72, 78)

[node name="Dice" type="Area2D"]
collision_mask = 2
script = ExtResource("1_r8uxv")
dice = 3

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2(0.1, 0.1)

[node name="hover" type="Sprite2D" parent="Sprites"]
visible = false
modulate = Color(0.000693898, 0.000693898, 0.000693898, 1)
position = Vector2(-1.11621e-05, 30)
scale = Vector2(1.11576, 1.19944)
texture = ExtResource("1_7np1x")

[node name="Shadow" type="Sprite2D" parent="Sprites"]
modulate = Color(0.621524, 0.621524, 0.621524, 1)
position = Vector2(0, 60.345)
texture = ExtResource("3_086lr")

[node name="Number" type="AnimatedSprite2D" parent="Sprites"]
sprite_frames = SubResource("SpriteFrames_48f4g")
animation = &"6"

[node name="Dead" type="Sprite2D" parent="Sprites"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.9, 0.9)
texture = ExtResource("9_tt4xd")

[node name="Health" type="Sprite2D" parent="Sprites"]
position = Vector2(0, -358.275)
scale = Vector2(0.225, 0.225)
texture = ExtResource("7_ysb6c")

[node name="Label" type="Label" parent="Sprites/Health"]
offset_left = -202.0
offset_top = -365.585
offset_right = -87.0
offset_bottom = -163.585
scale = Vector2(3.545, 3.545)
theme_override_fonts/font = ExtResource("8_r331j")
theme_override_font_sizes/font_size = 174
text = "0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprites/Health"]
libraries = {
"": SubResource("AnimationLibrary_qg7yt")
}

[node name="x" type="Label" parent="Sprites"]
offset_left = -116.655
offset_top = -268.53
offset_right = 203.345
offset_bottom = 205.47
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(118.62, 267.405)
theme_override_colors/font_color = Color(0.550985, 0.209238, 0.195492, 1)
theme_override_fonts/font = ExtResource("8_r331j")
theme_override_font_sizes/font_size = 400
text = "x "

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_maxu3")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
